@@ -249,6 +249,16 @@ class ClientInvoicesController {
       .then(data => res.send(data))
       .catch(this._handleError.bind(this, res));
   }
+
+  billingExport(req, res) {
+    logService.logInfo('[billingExport] - Exportar la facturación de los clientes');
+    Promise.resolve(req.query)
+      .tap(this.invoiceValidator.isValidYear)
+      .then(this.clientInvoiceService.billing)
+      .then(billing => this.clientInvoiceService.billingExport(req.query, billing))
+      .then(data => res.send(data))
+      .catch(this._handleError.bind(this, res));
+  }
 }
 
 module.exports = ClientInvoicesController;
